2016-06-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/ammessage.c: typo

2016-06-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Changer.pm (label_to_slot): Fix for $r and $t
	  substitution
	* perl/Amanda/Changer/disk.pm: Do not create all num-slot directories,
	  inventory return only the slot with a directory + runtapes new slots
	* perl/Amanda/Changer/diskflat.pm: inventory return only the slot with
	  a label + runtapes new slots
	* installcheck/Amanda_Rest_Storages.pl: Set auto-create-slot

2016-06-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amflock.c (common-src/amflock.c): Create the parent
	  directory

2016-06-07  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: Allow $t in changerfile and tpchanger from a
	  changer section
	* man/xml-source/amanda.conf.5.xml: Document it

2016-06-07  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Changer.pm: Allow $r and $t in autolabel and
	  meta-autolabel
	* man/xml-source/amanda.conf.5.xml: Document it

2016-06-07  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: Allow $o, $c, $r and $t in tapepool
	* man/xml-source/amanda.conf.5.xml: Document it

2016-06-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/xfer-dest-taper-splitter.c: Do not cancel twice
	* perl/Amanda/Taper/Worker.pm: Abort_setup on input_errors
	* server-src/dumper.c: Improve debugging

2016-06-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/ammessage.c (set_message): Fix typo in mesage 2800036

2016-06-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/shm-ring.c (cleanup_shm_ring): New function to remove
	  unused semaphore and shared memory
	* common-src/shm-ring.h (cleanup_shm_ring): Add prototype
	* server-src/driver.c: Call cleanup_shm_ring

2016-06-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (handle_chunker_result): Set job on BOGUS
